Fix icon display bug

--- a/styles.css
+++ b/styles.css
@@ -84,41 +84,41 @@ body {
 }
 
 .wand-icon {
-  background: url(/images/wand-white.png);
+  background: url(./images/wand-white.png);
   background-size: contain;
 }
 .wand-icon:hover {
-  background: url(/images/wand-inv.png);
+  background: url(./images/wand-inv.png);
   background-size: contain;
 }
 .wand-icon:active {
-  background: url(/images/wand-grey.png);
+  background: url(./images/wand-grey.png);
   background-size: contain;
 }
 
 .sword-icon {
-  background: url(/images/sword-white.png);
+  background: url(./images/sword-white.png);
   background-size: contain;
 }
 .sword-icon:hover {
-  background: url(/images/sword-inv.png);
+  background: url(./images/sword-inv.png);
   background-size: contain;
 }
 .sword-icon:active {
-  background: url(/images/sword-grey.png);
+  background: url(./images/sword-grey.png);
   background-size: contain;
 }
 
 .bow-icon {
-  background: url(/images/bow-white.png);
+  background: url(./images/bow-white.png);
   background-size: contain;
 }
 .bow-icon:hover {
-  background: url(/images/bow-inv.png);
+  background: url(./images/bow-inv.png);
   background-size: contain;
 }
 .bow-icon:active {
-  background: url(/images/bow-grey.png);
+  background: url(./images/bow-grey.png);
   background-size: contain;
 }
 
