Fix font on New Game button

--- a/styles.css
+++ b/styles.css
@@ -158,4 +158,5 @@ body {
   border: 5px goldenrod groove;
   border-radius: 20% 0%;
   align-self: center;
+  font-family: 'Diplomata SC', cursive;
 }
